tests/parser/errors/var_declaration.rv
var
var no_type_no_value
var : House
var home House
var home : 12+4
var home : House = var a
